samples/_failures_safe/1761127579_d07212_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4d727b84.c: In function ‘main’:
./samples/SAFE/__tmp_4d727b84.c:145:5: error: expected declaration or statement at end of input
  145 |     }
      |     ^
